<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/termux_debugging_preferences_title"
        app:summary="@string/termux_debugging_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.DebuggingPreferencesFragment"/>

    <Preference
        app:title="@string/termux_terminal_io_preferences_title"
        app:summary="@string/termux_terminal_io_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.TerminalIOPreferencesFragment"/>

    <Preference
        app:title="@string/termux_terminal_view_preferences_title"
        app:summary="@string/termux_terminal_view_preferences_summary"
        app:fragment="com.termux.app.fragments.settings.termux.TerminalViewPreferencesFragment"/>

    <PreferenceCategory app:key="xsel" app:title="Clipboard Tools">
        <Preference
            app:key="install_xsel"
            app:title="@string/install_xsel_title"
            app:summary="@string/install_xsel_summary" />
    </PreferenceCategory>

    <Preference
        app:key="package_manager"
        app:title="Package Manager"
        app:summary="Current: apt"
        app:icon="@android:drawable/ic_menu_manage" />

</PreferenceScreen>
